[package]
name = "signifix"
version = "0.4.0"
authors = [
	"Rouven Spreckels <n3vu0r@qu1x.org>",
]
description = "Number Formatter of Fixed Significance with Metric Unit Prefix"
documentation = "https://docs.rs/signifix/0.4.0/signifix/"
homepage = "https://qu1x.org/signifix"
repository = "https://github.com/qu1x/signifix"
readme = "README.md"
keywords = [
	"number",
	"format",
	"significant",
	"unit",
	"prefix",
]
license = "LGPL-3.0"
include = [
	"src/lib.rs",
	"Cargo.toml",
	"RELEASES.md",
	"COPYING",
	"COPYING.LESSER",
]
